# lakefs-spec

./: .bumpversion.cfg  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitkeep  .gitlab-ci.yml  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  README.md  codecov.yml  dangerfile.ts  demo-requirements.txt  development  index.html  latest  mkdocs.yml  pyproject.toml  requirements-demos.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  robots.txt  versions.json  zizmor.yml
.binder/: postBuild  requirements.txt  start
.github/: pull-request.md  pull-request.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: python.yaml  release.yaml
0.2.1.dev24+g8d1a4d3/: index.html
0.2.1.dev5+geffc0bd/search/: search_index.json
0.2.1.dev6+g15aba20/: index.html
0.2.2.dev14+g8d49758/: index.html  sitemap.xml
0.2.2.dev14+g8d49758/search/: search_index.json
0.2.2.dev15+gce1b44c/: sitemap.xml
0.2.2.dev16+g5f68b59/: objects.inv  sitemap.xml
0.2.2.dev2+g8808b35/search/: search_index.json
0.2.2.dev21+g72abe4c/: 404.html  sitemap.xml
0.2.2.dev21+g72abe4c/search/: search_index.json
0.2.2.dev23+g4cd90e5/: index.html
0.2.2.dev23+g4cd90e5/mkdocs_customization/: extra.css
0.2.2.dev28+gea1178f/: objects.inv  sitemap.xml
0.2.2.dev28+gea1178f/search/: search_index.json
0.2.2.dev31+g6e034b9/use-cases/: index.html
0.2.2.dev35+g764d3d7/search/: search_index.json
0.3.1.dev14+gbc76a28/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1.dev14+gbc76a28/search/: search_index.json
build_scripts/: run_in_venv.sh
demos/: .lakectl.yaml  demo_data_science_project.ipynb  demo_full_data_science_project.ipynb  rain_prediction.ipynb  requirements.txt
demos/demo-ci/: create_demo_notebook.py  jupytext_to_executed_notebook.py
development/: 404.html  index.html  objects.inv  sitemap.xml
development/CONTRIBUTING/: index.html
development/_code/: polars_example.py
development/_scripts/: gen_api_ref_pages.py
development/_styles/: extra.css
development/guides/: index.html
development/quickstart/: index.html
development/search/: search_index.json
development/tutorials/: demo_data_science_project.py  index.html
development/use-cases/: index.html
docs/: README.md  index.md  quickstart.md  use-cases.md
docs/_code/: pandas_example.py  polars_example.py  quickstart.py
docs/_scripts/: gen_api_ref_pages.py  jupytext_convert.py
docs/_styles/: extra.css  neoteroi-mkdocs.css  theme.css
docs/_theme_overrides/: main.html
docs/guides/: configuration.md  filesystem-usage.md  index.md  integrations.md  transactions.md  usage.md
docs/mkdocs_customization/: extra.css  neoteroi-mkdocs.css
docs/tutorials/: demo_best_practices.py  demo_data_science_project.ipynb  demo_data_science_project.py  index.md
hack/: README.md  compose.yml  docker-compose.yml  lakefs-s3-local.yml  lock-deps.sh
hack/config/: s3.json
latest/: 404.html  index.html
latest/CONTRIBUTING/: index.html
latest/_code/: pyarrow_example.py
latest/quickstart/: index.html
latest/search/: search_index.json
latest/tutorials/: demo_data_science_project.py  index.html
latest/use-cases/: index.html
src/lakefs_spec/: __init__.py  client.py  client.pyi  client_helpers.py  commithook.py  config.py  errors.py  hooks.py  spec.py  transaction.py  types.py  util.py
tests/: conftest.py  test_blockstore.py  test_checksum.py  test_client_helpers.py  test_commit.py  test_config.py  test_copy.py  test_errors.py  test_exists.py  test_fs.py  test_get_file.py  test_hooks.py  test_info.py  test_internals.py  test_lakefs_file.py  test_lakefs_spec.py  test_ls.py  test_put_file.py  test_rm.py  test_spec_utils.py  test_transactions.py  test_util.py  util.py
tests/regression/: test_gh_297.py  test_gh_299.py  test_gh_314.py  test_gh_319.py  test_gh_321.py
tests/smoke_tests/: test_abstractfile.py  test_abstractfilesystem.py  test_integrations.py
v0.10.0/: 404.html  index.html  sitemap.xml
v0.10.0/CONTRIBUTING/: index.html
v0.10.0/guides/: index.html
v0.10.0/quickstart/: index.html
v0.10.0/search/: search_index.json
v0.10.0/tutorials/: index.html
v0.11.0/: 404.html  index.html  sitemap.xml
v0.11.0/CONTRIBUTING/: index.html
v0.11.0/guides/: index.html
v0.11.0/quickstart/: index.html
v0.11.0/search/: search_index.json
v0.11.0/tutorials/: index.html
v0.11.1/: 404.html  index.html  objects.inv
v0.11.1/CONTRIBUTING/: index.html
v0.11.1/guides/: index.html
v0.11.1/quickstart/: index.html
v0.11.1/search/: search_index.json
v0.11.1/tutorials/: index.html
v0.11.2/: 404.html  index.html  sitemap.xml
v0.11.2/CONTRIBUTING/: index.html
v0.11.2/guides/: index.html
v0.11.2/quickstart/: index.html
v0.11.2/search/: search_index.json
v0.11.2/tutorials/: index.html
v0.11.3/: sitemap.xml
v0.11.3/CONTRIBUTING/: index.html
v0.11.3/quickstart/: index.html
v0.11.3/search/: search_index.json
v0.11.3/tutorials/: index.html
v0.11.4/: 404.html  sitemap.xml
v0.11.4/search/: search_index.json
v0.11.5/: index.html  sitemap.xml
v0.11.5/guides/: index.html
v0.11.5/quickstart/: index.html
v0.11.5/search/: search_index.json
v0.12.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.12.0/CONTRIBUTING/: index.html
v0.12.0/guides/: index.html
v0.12.0/quickstart/: index.html
v0.12.0/search/: search_index.json
v0.12.0/tutorials/: index.html
v0.13.0/: 404.html  index.html  sitemap.xml
v0.13.0/CONTRIBUTING/: index.html
v0.13.0/guides/: index.html
v0.13.0/search/: search_index.json
v0.13.0/tutorials/: index.html
v0.14.0/: sitemap.xml
v0.14.0/CONTRIBUTING/: index.html
v0.14.0/_code/: hf_datasets_example.py
v0.14.0/_theme_overrides/: main.html
v0.3.0/: objects.inv  sitemap.xml
v0.4.0/: 404.html  objects.inv
v0.5.0/: objects.inv
v0.6.0/: 404.html  index.html  objects.inv
v0.6.1/: 404.html  index.html
v0.7.0/: 404.html  index.html  sitemap.xml
v0.8.0/: 404.html  index.html  sitemap.xml
v0.8.0.post0/: index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  sitemap.xml
(+357 files in other folders)
